--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:image" content="https://raw.githubusercontent.com/reimertz/brutalistcss/master/app/logo.png">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="http://reimertz.github.io/dist/latest/css/brutalist.latest.css">
+    <link rel="stylesheet" type="text/css" href="http://reimertz.github.io/brutalist.css/dist/latest/css/brutalist.latest.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
